--- a/EuroChempionship2020/EuroChampionship.csproj
+++ b/EuroChempionship2020/EuroChampionship.csproj
@@ -47,11 +47,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extention.cs" />
-    <Compile Include="Forms\FourthFinalForm.cs">
+    <Compile Include="Forms\PlayoffsForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\FourthFinalForm.Designer.cs">
-      <DependentUpon>FourthFinalForm.cs</DependentUpon>
+    <Compile Include="Forms\PlayoffsForm.Designer.cs">
+      <DependentUpon>PlayoffsForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\GroupForm.cs">
       <SubType>Form</SubType>
@@ -65,28 +65,18 @@
     <Compile Include="Forms\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\GroupGameForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\GroupGameForm.Designer.cs">
-      <DependentUpon>GroupGameForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="GroupInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Team.cs" />
     <Compile Include="TeamArray.cs" />
-    <EmbeddedResource Include="Forms\FourthFinalForm.resx">
-      <DependentUpon>FourthFinalForm.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\PlayoffsForm.resx">
+      <DependentUpon>PlayoffsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\GroupForm.resx">
       <DependentUpon>GroupForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Forms\GroupGameForm.resx">
-      <DependentUpon>GroupGameForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
