--- a/EuroChempionship2020/EuroChempionship2020.csproj
+++ b/EuroChempionship2020/EuroChempionship2020.csproj
@@ -47,11 +47,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extention.cs" />
-    <Compile Include="Forms\FourthFinalForm.cs">
+    <Compile Include="Forms\PlayoffsForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\FourthFinalForm.Designer.cs">
-      <DependentUpon>FourthFinalForm.cs</DependentUpon>
+    <Compile Include="Forms\PlayoffsForm.Designer.cs">
+      <DependentUpon>PlayoffsForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\GroupForm.cs">
       <SubType>Form</SubType>
@@ -69,8 +69,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Team.cs" />
     <Compile Include="TeamArray.cs" />
-    <EmbeddedResource Include="Forms\FourthFinalForm.resx">
-      <DependentUpon>FourthFinalForm.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\PlayoffsForm.resx">
+      <DependentUpon>PlayoffsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\GroupForm.resx">
       <DependentUpon>GroupForm.cs</DependentUpon>
